Bug 60990 - FILESAVE as .docx (MSO2007): paragraph background pictures lost when reopen
Summary: FILESAVE as .docx (MSO2007): paragraph background pictures lost when reopen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: Other Windows (All)
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0 target:4.1.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2013-02-17 08:38 UTC by Rainer Bielefeld Retired
Modified: 2015-12-17 07:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test Kit (55.90 KB, application/x-zip-compressed)
2013-02-17 08:38 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2013-02-17 08:38:23 UTC
Created attachment 74966 [details]
Test Kit

Steps how to reproduce with  "LibreOffice 3.6.5.2 " English UI/ German Locale [Build-ID: 5b93205] {pull date 2013-01-18} on German WIN7 Home Premium (64bit) 

1. Open sample document "SampleBackgroundPictures.odt" from attached test kit
2. Save as  .docx
3. close
4. Reopen with LibO:
   Bug: only placeholders shown for 2 background pictures (jpg, png)
5. close, reopen with MS WORD VIEWER
   Bug:  2 background pictures not visible at all

The reason is the "Wrap - Through - Background" picture property. If you redo the test with "Sample.odt" the pictures will be visible

Pictures remain visible after export from 3.4.5 and 3.5.7 so regression.

Reincarnation of "Bug 30713 - [FILESAVE]: Images only shown as placeholders in docx" (at least some aspects of it)?
Comment 1 Rainer Bielefeld Retired 2013-02-17 08:41:05 UTC
LibreOffice 3.6.5.2 shows the background pictures in attached "SampleBackgroundPictures_MSO2007_357.docx" fine. So a bibisect should not be too difficult.
Comment 2 A (Andy) 2013-02-17 10:11:08 UTC
partially reproducible with LO 4.0.0.3 (Win7 Home, 64bit)

Results after saving as a docx file (see also the attached file 345) and reopening it with LO and opening it with MS Office 2007:
in LO: the draw element is no longer shown as a background image (including a missing text), the other elements are shown fine
in MSO: the draw element is not shown as a background image and in addition paragraphs are added, the other elements are shown fine

When the file is saved as a doc file, then all the elements are shown fine in LO and MSO.

An additional interesting bug is that if the docx file is saved once more as a docx file, then in addition the png and jpg elements are displaced.

@Rainer: Would is the difference between the attached files 345 and 357 and how is the file 365 generated?  365 shows in LO and MSO a Read Error message for the png and jpg elements and the draw element is not shown as a background image.
Comment 3 Rainer Bielefeld Retired 2013-02-17 11:43:37 UTC
(In reply to comment #2)
> the draw element is no longer shown as a background image
That#s "Bug 54660 - FILEOPEN .docx (MSO2007) (OOXML) ignores wrap property 'Background'", please excuse me, I forgot to mention!

> png and jpg elements are displaced
That is something I also saw during tests with older LibO Verions (3.4.5 or so). The big problem here is that we have quite a lot problems here and it's difficult to produce sane sample documents because of several FILESAVE problems.

@A
Thank you for review
Can you please following up tthat "displaced pictures" problem in a new Bug report?
Comment 4 Joel Madero 2013-02-28 20:02:55 UTC
Unable to bibisect - 

Earliest bibisect version is 3.6alpha0 and the problem existed there.

Removing bibisectrequest
Comment 5 Joel Madero 2013-05-28 18:38:43 UTC
Adding bibisectrequest because I believe this may affect Linux as well.
Comment 6 Miklos Vajna 2013-07-24 13:46:57 UTC
I just tested this on master; the pictures are no longer missing, but the blue background for the middle drawing shape is missing. I'll take care of that.
Comment 7 Miklos Vajna 2013-07-24 16:08:40 UTC
Also the text on that shape is not green, nor centered.
Comment 8 Commit Notification 2013-07-24 16:15:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4a186d7da652b281ea7919b7918006a252f72290

fdo#60990 VML export: fix handling of v:fill's on attribute



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-07-24 16:15:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1753c4f9f1713ca4a9a1ac3a145269c850eef6fb

fdo#60990 VML export: handle paragraph/run properties of shape text



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-07-24 16:16:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ffed545adbb8a27a024d4d6a74dcaa8a87ba66a

Related: fdo#60990 w:textbox -> v:textbox



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-07-24 16:16:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94b3ec0597ee21b933d02496402ff0f3a416e6a3

fdo#60990 testcase



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Miklos Vajna 2013-07-25 08:12:16 UTC
-4-1 review: https://gerrit.libreoffice.org/5094
Comment 13 Commit Notification 2013-07-25 08:19:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d67b812403e1c22ee09b70dddf6b2ac13e73b58&h=libreoffice-4-1

fdo#60990 VML export: handle paragraph/run properties of shape text


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Robinson Tryon (qubit) 2015-12-17 07:12:08 UTC
Migrating Whiteboard tags to Keywords: (bibisectrequest)
[NinjaEdit]