fdo#60990 VML export: fix handling of v:fill's on attribute

Change-Id: I8230a80b6a530b172e02a08a1a4dd201f533670a